src/objects/Apttus__APTS_Template__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>LP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <!--fields>
        <fullName>Apttus__Agreement_Types__c</fullName>
        <description>Note: If you add a new agreement record type, the type must also be manually added to this set of picklist values to keep record types in sync between agreements and templates.</description>
        <label>Agreement Types</label>
        <picklist>
            <picklistValues>
                <fullName>LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Distributor as Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Distributor as Strategic/Key Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Distributor as AVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Technical Channel as Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Technical Channel as Key/Strategic Partner or AVP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields-->
    <fields>
        <fullName>Apttus__BusinessObject__c</fullName>
        <description>The API name of the business object associated with the template</description>
        <inlineHelpText>The API name of the business object associated with the template</inlineHelpText>
        <label>Business Object</label>
        <picklist>
            <controllingField>Apttus__Type__c</controllingField>
            <picklistValues>
                <fullName>Apttus__APTS_Agreement__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus_Proposal__Proposal__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus_Config2__ProductConfiguration__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus_Config2__LineItem__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint_Business_Plan__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <description>Specifies the contract template type which can be either a template or clause type.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Clause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner Business Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner Business Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Apttus__Agreements</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Apttus__Locale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Agreement</value>
        </filters>
        <filters>
            <field>Apttus__IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Spain MSPA Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus__Proposals</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Apttus__Locale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Proposal</value>
        </filters>
        <filters>
            <field>Apttus__IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Spain Quotation Templates</label>
        <language>en_US</language>
    </listViews>
</CustomObject>